--- a/apps/bundle/public/index.html
+++ b/apps/bundle/public/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <title>CRA + Material UI + TS</title>
     <style>
       body {
         margin: 0;
         padding: 0;
+      }
+      body > * {
+        height: 100vh;
+        width: 100vw;
       }
     </style>
   </head>
